# tiingo-mcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  smithery.yaml
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-04-13-resources-and-prompts.md
docs/superpowers/specs/: 2026-04-13-resources-and-prompts-design.md
src/tiingo_mcp/: __init__.py  __main__.py  client.py  prompts.py  resources.py  server.py
tests/: conftest.py  test_client.py  test_integration.py  test_prompts.py  test_resources.py  test_server.py
