[project]
name = "tiingo-mcp"
version = "1.1.0"
description = "A production-grade MCP server for the Tiingo financial data API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "Seth Hobson" }]
keywords = ["mcp", "tiingo", "finance", "stocks", "crypto", "forex", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
]

[project.scripts]
tiingo-mcp = "tiingo_mcp:main"

[project.urls]
Homepage = "https://github.com/wshobson/tiingo-mcp"
Repository = "https://github.com/wshobson/tiingo-mcp"
Issues = "https://github.com/wshobson/tiingo-mcp/issues"
Changelog = "https://github.com/wshobson/tiingo-mcp/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.0",
    "pytest-httpx>=0.35.0",
    "ruff>=0.11.0",
]

[build-system]
requires = ["uv_build>=0.11.6,<0.12"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
    "RUF",   # ruff-specific
    "ASYNC", # flake8-async
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["TCH"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
